<!--
  ~ Copyright (c) 2016 Jan Böhmer
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">WiFi-Sinus</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="mode_freq">Output Frequency</string>
    <string name="mode_sweep">Sweep</string>
    <string name="mode_curves">Filter Curves</string>
    <string name="settings_server">Server Settings</string>
    <string name="settings_client">Client Settings</string>
    <string name="mode_tools">Tools</string>
    <string name="title_activity_client_settings">Client Settings</string>
    <string name="pref_header_general">General Settings</string>
    <string name="settings_address_title">Server Address</string>
    <string name="settings_address_summary">The Address of the DDS Generator in the WLAN</string>


    <string-array name="freq_units_array" translatable="false">
        <item>Hz</item>
        <item>kHz</item>
        <item>MHz</item>
    </string-array>


    <string-array name="delay_units_array" translatable="false">
        <item>µs</item>
        <item>ms</item>
        <item>s</item>
    </string-array>

    <string-array name="phase_array" translatable="false">
        <item>0°</item>
        <item>11.25°</item>
        <item>22.5°</item>
        <item>33.75°</item>
        <item>45°</item>
        <item>56.25°</item>
        <item>67.5°</item>
        <item>78.75°</item>
        <item>90°</item>
        <item>101.25°</item>
        <item>112.5°</item>
        <item>123.75°</item>
        <item>135°</item>
        <item>146.25°</item>
        <item>157.5°</item>
        <item>168.75°</item>
        <item>180°</item>
        <item>191.25°</item>
        <item>202.5°</item>
        <item>213.75°</item>
        <item>225°</item>s
        <item>236.25°</item>
        <item>247.5°</item>
        <item>258.75°</item>
        <item>270°</item>
        <item>281.25°</item>
        <item>292.5°</item>
        <item>303.75°</item>
        <item>315°</item>
        <item>326.25°</item>
        <item>337.5°</item>
        <item>348.75°</item>


    </string-array>
    <string name="header_frequency">Set Frequency:</string>
    <string name="freq_active">Output Active</string>
    <string name="header_phase">Phase:</string>
    <string name="tools_header_red">Red LED:</string>
    <string name="tools_header_green">Green LED:</string>
    <string name="tools_led_on">ON</string>
    <string name="tools_led_off">OFF</string>
    <string name="tools_led_pwm" translatable="false">PWM:</string>
    <string name="action_bar_tools">Tools</string>

    <string name="action_bar_sweep">Sweep Output</string>
    <string name="action_bar_curves">Filter Curves</string>
    <string name="action_bar_freq">Frequency Generator</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="header_sweep">Sweep Output:</string>
    <string name="lower_frequency_limit">Lower frequency limit:</string>


    <!-- Strings related to Settings -->
    <string name="settings_category_credits">Version and Credits</string>
    <string name="upper_frequency_limit">Upper frequency limit:</string>
    <string name="delay_between_two_steps">Delay between two steps:</string>
    <string name="width_of_a_frequency_step">Width of a frequency step:</string>
    <string name="reverse_sweep_direction">Reverse Sweep Direction:</string>
    <string name="quot_pong_quot_mode">\"Pong\" Mode:</string>
    <string name="sweep_error_max_out_of_bound">Upper frequency limit has to be between 0Hz and 50MHz!</string>
    <string name="sweep_error_min_bigger_than_max">Upper limit has to be bigger than the lower limit!</string>
    <string name="sweep_error_min_out_of_bound">Lower frequency limit has to be between 0Hz and 50MHz!</string>
    <string name="sweep_error_parse_exception">Could not parse number! Please Check your input!</string>
    <string name="sweep_error_delay_out_of_bound">Delay has to be bigger than 0 us!</string>
    <string name="sweep_error_res_out_of_bound">Step width has to be bigger than 0Hz!</string>
    <string name="sweep_error_step_too_big">Step width too big!</string>
    <string name="tools_error_pwm_out_of_bound">PWM value has to be between 0 and 1024!</string>
    <string name="tools_error_red_parse">Could not parse red value! Check your input!</string>
    <string name="tools_error_green_parse">Could not parse green value! Check your input!</string>
    <string name="nav_header_settings">Settings</string>

</resources>
