<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 Jan Böhmer
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_freq"
            android:icon="@drawable/ic_menu_freq"
            android:title="@string/mode_freq" />
        <item
            android:id="@+id/nav_sweep"
            android:icon="@drawable/ic_menu_sweep"
            android:title="@string/mode_sweep" />
        <item
            android:id="@+id/nav_curves"
            android:icon="@drawable/ic_menu_curves"
            android:title="@string/mode_curves" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_tools"
            android:title="@string/mode_tools" />
    </group>

    <item android:title="@string/nav_header_settings">
        <menu>
            <item
                android:id="@+id/nav_server_settings"
                android:icon="@drawable/ic_menu_server_settings"
                android:title="@string/settings_server" />
            <item
                android:id="@+id/nav_client_settings"
                android:icon="@drawable/ic_menu_client_settings"
                android:title="@string/settings_client" />
        </menu>
    </item>

</menu>
