<!--
  ~ Copyright (c) 2016 Jan Böhmer
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jbtronics.wifi_sinus.SweepFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="3dp">

        <ToggleButton
            android:text="Activate Sweep:"
            android:id="@+id/toggle_sweep_active"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/toggle_sweep_active"
            android:paddingBottom="5dp"
            android:layout_alignParentTop="true">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:stretchColumns="0">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/upper_frequency_limit"
                    android:id="@+id/textView4"
                    android:layout_column="0"
                    android:layout_span="2" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/edit_sweep_max"
                    android:layout_column="0"
                    android:text="1000" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/spinner_sweep_max"
                    android:layout_column="1"
                    android:gravity="fill_horizontal|fill_vertical"
                    android:textAlignment="textStart"
                    android:layout_gravity="left" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/lower_frequency_limit"
                    android:id="@+id/textView5"
                    android:layout_column="0"
                    android:layout_span="2" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <EditText
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/edit_sweep_min"
                    android:layout_column="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/spinner_sweep_min"
                    android:layout_column="1"
                    android:gravity="right"
                    android:textAlignment="textStart"
                    android:layout_gravity="left" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/delay_between_two_steps"
                    android:id="@+id/textView6"
                    android:layout_column="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <EditText
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/edit_sweep_delay"
                    android:layout_column="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/spinner_sweep_delay"
                    android:layout_column="1"
                    android:gravity="right"
                    android:textAlignment="textStart"
                    android:layout_gravity="left" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/width_of_a_frequency_step"
                    android:id="@+id/textView7"
                    android:layout_column="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <EditText
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/edit_sweep_res"
                    android:layout_column="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/spinner_sweep_resolution"
                    android:layout_column="1"
                    android:gravity="right"
                    android:textAlignment="textStart"
                    android:layout_gravity="left" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Switch
                    android:text="@string/reverse_sweep_direction"
                    android:id="@+id/switch_sweep_reverse"
                    android:layout_column="0"
                    android:layout_span="2"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:checked="false" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Switch
                    android:text="@string/quot_pong_quot_mode"
                    android:id="@+id/switch_sweep_pong"
                    android:layout_column="0"
                    android:layout_span="2"
                    android:layout_height="wrap_content" />
            </TableRow>

        </TableLayout>
        </ScrollView>



    </RelativeLayout>
</FrameLayout>
